# repath-model

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  release-notes.md
.github/workflows/: python-ci.yml
configs/: release.example.json
docs/: release-artifact-contract.md  training-and-benchmark-playbook.md
notebooks/: release_workflow.ipynb  retraining_workflow.ipynb
scripts/: analyze_benchmark_results.py  benchmark_candidate_model.py  benchmark_model.py  build_benchmark_batches.py  build_benchmark_completion_template.py  build_release.py  build_resolved_benchmark_manifest.py  build_taxonomy.py  check_benchmark_coverage.py  compare_benchmark_results.py  dedupe_benchmark_labeled.py  fill_retraining_negatives.py  merge_coverage_expansion_template.py  merge_retraining_queue.py  normalize_benchmark_labeled_urls.py  plan_benchmark_priority.py  publish_release.sh  run_benchmark_pipeline.py  sync_labeled_from_manifest.py  train_detector_from_annotation.py
scripts/annotation/: seed_annotation_boxes.py
scripts/data/: bootstrap_kaggle_dataset.py  build_taxonomy.py  dedupe_benchmark_labeled.py  fill_retraining_negatives.py  merge_coverage_expansion_template.py  merge_retraining_queue.py  normalize_benchmark_labeled_urls.py  suggest_benchmark_from_kaggle.py  suggest_benchmark_online.py  suggest_benchmark_online_bulk.py  suggest_negative_online.py  sync_labeled_from_manifest.py
scripts/evaluation/: audit_benchmark_dataset.py  benchmark_candidate_model.py  build_benchmark_manifest.py  build_retraining_queue.py  build_supported_holdout_manifest.py  (+7 more)
(+34 files in other folders)
